# kernel_google_eos

arch/arm64/boot/dts/: audio-devicetree  bt-devicetree  display-devicetree  google-dts-base  graphics-devicetree  vendor  video-devicetree  wlan-devicetree
google-modules/amplifiers/cs40l26/: BUILD.bazel  cl_dsp-debugfs.c  cl_dsp.c  cl_dsp.h  cs40l26-codec.c  cs40l26-debugfs.c  cs40l26-i2c.c  cs40l26-spi.c  cs40l26-sysfs.c  cs40l26-tables.c  cs40l26.c  cs40l26.h  defconfig
google-modules/bluetooth/broadcom/: BUILD.bazel  Kbuild  Makefile  nitrous.c
google-modules/bms/: BUILD.bazel  Kconfig  Makefile  OWNERS  gbms_power_supply.h  gbms_storage.c  gbms_virt_storage.c  google_battery.c  google_bms.c  google_bms.h  google_charger.c  google_dc_pps.h  google_ttf.c  sw5100_bms.c
google-modules/bms/misc/: BUILD.bazel  logbuffer.c
google-modules/display/watch/mcu-offload/mcu_display/: BUILD.bazel  main.c  mcu_display_nanohub.c  mcu_display_nanohub.h
google-modules/display/watch/mcu-offload/mcu_display/include/: mcu_display_exports.h
google-modules/nanohub/: BUILD.bazel  Kbuild  Kconfig  Makefile  OWNERS  README.md  bl_nxp.c  bl_nxp.h  comms.c  comms.h  main.c  main.h  nanohub.h  nanohub_exports.h  spi.c
google-modules/nfc/: OWNERS
google-modules/nfc/nxp/snxxx/: BUILD.bazel  Kbuild  Makefile  common.c  common.h  common_ese.c  i2c_drv.c  i2c_drv.h  p73.c
google-modules/soc/msm/: BUILD.bazel  Kconfig.ext  Kconfig.ext_modules  Makefile.include  build.config.sw5100  device.bazelrc  pixel_watch_utils.bzl  vendor_dlkm.blocklist.monaco  vendor_dlkm_modules.sw5100  vendor_kernel_boot_charger_modules.sw5100  vendor_kernel_boot_modules.monaco  vendor_kernel_boot_modules.sw5100  vendor_kernel_boot_recovery_modules.sw5100
google-modules/soc/msm/arch/arm64/boot/dts/: audio-devicetree  display-devicetree  graphics-devicetree  video-devicetree
google-modules/soc/msm/arch/arm64/boot/dts/google/: sw5100-btwifi.dts  sw5100-btwifi.dtsi  sw5100-common-memory.dtsi  sw5100-i2s.dtsi  sw5100-mcu.dtsi  sw5100-modem.dtsi  sw5100-nanohub.dtsi  sw5100-pinctrl.dtsi  sw5100-qupv3.dtsi  sw5100-rt595.dtsi  sw5100-sdhc.dtsi  sw5100-sim-panel-cmd.dtsi  sw5100.dts  sw5100.dtsi
google-modules/soc/msm/arch/arm64/configs/: kasan_sw_tags.fragment  kcov.fragment  monaco_gki.fragment  sw5100.fragment
google-modules/soc/msm/bldr_log/: BUILD.bazel  Kbuild  Makefile  bldr_log.c
google-modules/soc/msm/debug_kinfo/: BUILD.bazel  Kbuild  debug_snapshot_debug_kinfo.c  debug_snapshot_debug_kinfo.h
google-modules/soc/msm/drivers/extcon/google/: BUILD.bazel  Kbuild  Makefile  google-extcon-shim.c
google-modules/soc/msm/drivers/power/supply/google/: BUILD.bazel  Kbuild  Makefile  google-smblite-hvdcp.c
google-modules/soc/msm/include/dtc/: bindings
google-modules/soc/msm/include/dtc/dt-bindings/extcon/: google,extcon-shim.h
google-modules/soc/msm/restart_debug/: BUILD.bazel  Kbuild  Makefile  restart_debug.c
google-modules/soc/msm/scripts/: BugId.py  build_mixed.sh  handle_aosp_merge.sh  script_utils.sh  update_symbol_list.sh
google-modules/soc/msm/wlan_mac/: BUILD.bazel  Kbuild  Makefile  google_wlan_mac.c
google-modules/sound/mcu_mic_codec/: BUILD.bazel  Makefile  mcu_mic_codec.c  mcu_mic_codec.txt
google-modules/touch/novatek_touch/: .clang-format  OWNERS  PREUPLOAD.cfg
google-modules/touch/novatek_touch/nt383x0/: BUILD.bazel  Kbuild  Kconfig  Makefile  novatek-nt383x0-i2c.dtsi  nt383x0.c  nt383x0.h  nt383x0_ext_proc.c  nt383x0_fw_update.c  nt383x0_mem_map.h  nt383x0_mp_ctrlram.c  nt383x0_mp_ctrlram.h
google-modules/wlan/syna/dhd4381/: BUILD.bazel  Kbuild  Kbuild_orig  Kconfig  Makefile  aiutils.c  bcmsdh.c  bcmsdh_linux.c  bcmsdh_sdmmc.c  bcmsdh_sdmmc_linux.c  bcmsdstd_linux.c  bcmutils.c  bcmwifi_channels.c  dhd.h  dhd_bus.h  dhd_cdc.c  dhd_common.c  dhd_config.c  dhd_config.h  dhd_custom_google.c  dhd_custom_gpio.c  dhd_custom_meson.c  dhd_dbg.h  dhd_debug.c  dhd_debug.h  dhd_debug_linux.c  dhd_flowring.c  dhd_flowring.h  dhd_ip.c  dhd_ip.h  dhd_linux.c  dhd_linux.h  dhd_linux_exportfs.c  dhd_linux_lb.c  dhd_linux_pktdump.c  dhd_linux_pktdump.h  dhd_linux_platdev.c  dhd_linux_priv.h  dhd_linux_rx.c  dhd_linux_tx.c  (+36 more)
google-modules/wlan/syna/dhd4381/include/: bcmdevs.h  bcmsdh.h  bcmwifi_channels.h  dhdioctl.h  epivers.h  ethernet.h  linux_osl.h  linuxver.h  wldev_common.h  wlioctl.h
msm-google-extra/: Android.mk  BUILD.bazel  EnableBazel.mk  OWNERS  audio_kernel_vendor_board.mk  audio_modules.bzl  module_mgr.bzl
msm-google-extra/asoc/: Kbuild  monaco.c  msm_monaco_dailink.h
msm-google-extra/asoc/codecs/: Kbuild
msm-google-extra/asoc/codecs/besbev/: Kbuild  besbev.c  internal.h
msm-google-extra/asoc/codecs/bolero/: Kbuild  bolero-cdc.c  rx-macro.c  tx-macro.c  va-macro.c  wsa-macro.c
msm-google-extra/asoc/codecs/wsa883x/: Kbuild
msm-google-extra/audio-devicetree/: Makefile  monaco-slate-dmic-idp-v1-audio.dts  monaco-slate-wdp-v1-audio.dts
msm-google-extra/bt-devicetree/: Kbuild  monaco-bt-standalone.dts  monaco-bt-standalone.dtsi  monaco-bt.dts  monaco-bt.dtsi
msm-google-extra/bt-devicetree/bindings/bluetooth/: btpower.txt
msm-google-extra/config/: sw5100auto.conf  sw5100autoconf.h
msm-google-extra/devicetree/: OWNERS
msm-google-extra/devicetree/qcom/: Makefile  monaco-idp-v1.1-overlay.dts  monaco-wdp-v1.1-overlay.dts  monaco.dtsi  platform_map.bzl  slate.dtsi
msm-google-extra/display-devicetree/: Kbuild
msm-google-extra/display-devicetree/display/: bengal-sde-display-common.dtsi  bengal-sde-display-idp-nopmi.dtsi  bengal-sde-display-idp.dtsi  bengal-sde-display-qrd-overlay.dts  bengal-sde-display-qrd.dtsi  bengal-sde.dtsi  trinket-sde-display-iot-dp-usbc-idp.dtsi
msm-google-extra/dsp/: Kbuild
msm-google-extra/graphics-devicetree/bindings/: adreno.txt
msm-google-extra/graphics-devicetree/gpu/: pitti-gpu.dtsi
msm-google-extra/include/asoc/: monaco-google.h
msm-google-extra/ipc/: Kbuild
msm-google-extra/soc/: Kbuild  swr-mstr-ctrl.c
msm-google-extra/wlan-devicetree/: Kbuild  niobe-kiwi-cnss.dts  pitti-adrastea.dtsi
(+30 files in other folders)
