# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
    visibility = [
        "//private/google-modules/power/reset:__subpackages__",
    ],
)

kernel_module(
    name = "bms",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/bms/misc:headers",
        "//private/msm-google/drivers/power/supply/qcom:qcom_battery_headers",
    ],
    outs = [
        "google-battery.ko",
        "google-bms.ko",
        "google-charger.ko",
        "sw5100_bms.ko",
    ],
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
        "//private/msm-google/drivers/power/supply/qcom:qcom_battery_modules",
    ],
)
