# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "broadcom",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
        "//private/google-modules/bms/misc:headers",
    ],
    outs = [
        "nitrous.ko",
    ],
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
    ],
)
