# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "ddk_module",
)

ddk_module(
    name = "bldr_log",
    srcs = [
        "bldr_log.c",
    ],
    out = "bldr_log.ko",
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
    deps = [
        "//private/msm-google:all_headers_aarch64",
    ],
)
