# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "kernel_module",
)

kernel_module(
    name = "touch_nt383x0",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
        "//private/google-modules/nanohub:nanohub_headers",
    ],
    outs = [
        "touch_nt383x0.ko",
    ],
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
    deps = [
        "//private/google-modules/nanohub",
    ],
)
