# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "kernel_module",
)

kernel_module(
    name = "dhd4381",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
    ],
    outs = [
        "synadhd4381.ko",
    ],
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)
