# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "ddk_module",
)

ddk_module(
    name = "extcon-shim",
    srcs = [
        "google-extcon-shim.c",
    ],
    out = "google-extcon-shim.ko",
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
    deps = [
        "//private/google-modules/soc/msm:sw5100.dt-bindings-headers",
        "//private/msm-google:all_headers_aarch64",
    ],
)
