# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "kernel_module",
)

kernel_module(
    name = "google-smblite-hvdcp",
    srcs = [
        "Kbuild",
        "google-smblite-hvdcp.c",
        "//private/google-modules/bms/misc:headers",
        "//private/msm-google/drivers/power/supply/qcom:qcom_battery_headers",
    ],
    outs = [
        "google-smblite-hvdcp.ko",
    ],
    kernel_build = "//private/google-modules/soc/msm:msm_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
        "//private/msm-google/drivers/power/supply/qcom:qcom_battery_modules",
    ],
)
